[package]
name = "solana-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.17"
solana-program = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.2"
ed25519-dalek = "1.0"
base58 = "0.2"
base64 = "0.21"
rand = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"